[workspace]
resolver = "2"
members = [
    "common",
    "csaf",
    "csaf/csaf-cli",
    "sbom",
    "sbom/sbom-cli",
]

[workspace.metadata.release]
tag = false
tag-name = "v{{version}}"

[patch.crates-io]
# csaf = { path = "../csaf-rs" }
#csaf = { git = "https://github.com/ctron/csaf-rs", rev = "0bbc262c76c50f7ec918e65d1cf9bf4c5dd564d7" }
