[package]
name = "walker-common"
description = "A common functionality for SBOM and CSAF walker"
version = "0.7.1"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf"]
readme = "../README.md"
# based on async traits
rust-version = "1.75"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
csv = "1"
digest = "0.10.7"
filetime = "0.2"
flexible-time = "0.1"
futures-util = "0.3"
html-escape = "0.2"
humantime = "2"
indicatif = "0.17.6"
indicatif-log-bridge = "0.2.1"
log = "0.4"
openid = "0.14"
pem = "3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.7"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "local-offset"] }
tokio = { version = "1", features = ["sync", "fs"] }
tracing = "0.1"
url = "2"

sequoia-openpgp = { version = "1", default-features = false, optional = true }

bzip2 = { version = "0.4", optional = true }
bzip2-rs = { version = "0.1", optional = true, features = ["rustc_1_51"] }

clap = { version = "4.5.0", features = ["derive", "env"], optional = true }
env_logger = { version = "0.11.3", optional = true }

# workaround until xattr fixes its win32 compilation issues.
[target.'cfg(any(unix, macos))'.dependencies]
xattr = { version = "1" }

[features]
default = ["bzip2"]
openpgp = ["sequoia-openpgp"]
cli = ["clap", "env_logger"]

_crypto-nettle = ["sequoia-openpgp/crypto-nettle"]

[package.metadata.cargo-all-features]
always_include_features = [
    "sequoia-openpgp/crypto-nettle",
]

[package.metadata.release]
enable-features = ["sequoia-openpgp/crypto-nettle"]
tag = true
