[package]
name = "walker-common"
description = "Common functionality for SBOM and CSAF walker"
version = "0.10.2"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf"]
readme = "../README.md"
# based on fs::absolute
rust-version = "1.79"

[dependencies]
anyhow =  { workspace = true }
async-trait = { workspace = true }
base64 =  { workspace = true }
bytes =  { workspace = true }
bzip2 = { workspace = true, optional = true }
bzip2-rs = { workspace = true, optional = true, features = ["rustc_1_51"] }
chrono = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive", "env"], optional = true }
csv = { workspace = true }
digest =  { workspace = true }
env_logger = { workspace = true, optional = true }
filetime =  { workspace = true }
flexible-time =  { workspace = true }
futures-util =  { workspace = true }
html-escape =  { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
indicatif-log-bridge =  { workspace = true }
liblzma = { workspace = true, optional = true }
log = { workspace = true }
openid =  { workspace = true }
pem =  { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sequoia-openpgp = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 =  { workspace = true }
thiserror =  { workspace = true }
thousands =  { workspace = true }
time = { workspace = true, features = ["serde", "formatting", "local-offset"] }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }
url =  { workspace = true }
walkdir =  { workspace = true }

# workaround until xattr fixes its win32 compilation issues.
[target.'cfg(any(unix, macos))'.dependencies]
xattr = { version = "1" }

[features]
default = ["bzip2"]
openpgp = ["sequoia-openpgp"]
cli = ["clap", "env_logger"]

_crypto-nettle = ["sequoia-openpgp/crypto-nettle"]

[package.metadata.cargo-all-features]
always_include_features = [
    "sequoia-openpgp/crypto-nettle",
]

[package.metadata.release]
enable-features = ["sequoia-openpgp/crypto-nettle"]
tag = true
