[package]
name = "walker-common"
description = "Common functionality for SBOM and CSAF walker"
version = "0.12.0"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf"]
readme = "../README.md"
rust-version = "1.85.0"

edition.workspace = true
license.workspace = true

[dependencies]
# normal
anyhow = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["std"] }
csv = { workspace = true }
digest = { workspace = true }
filetime = { workspace = true }
flexible-time = { workspace = true }
futures-util = { workspace = true }
html-escape = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
indicatif-log-bridge = { workspace = true }
log = { workspace = true }
openid = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
thousands = { workspace = true }
time = { workspace = true, features = ["serde", "formatting", "local-offset"] }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

# optional
bzip2 = { workspace = true, optional = true }
bzip2-rs = { workspace = true, optional = true, features = ["rustc_1_51"] }
clap = { workspace = true, features = ["derive", "env"], optional = true }
env_logger = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
liblzma = { workspace = true, optional = true }
sequoia-openpgp = { workspace = true, optional = true }

# workaround until xattr fixes its win32 compilation issues.
[target.'cfg(any(unix, macos))'.dependencies]
xattr = { workspace = true }

[features]
default = ["bzip2"]
openpgp = ["sequoia-openpgp"]
cli = ["clap", "env_logger"]
libbz2-rs-sys = ["bzip2?/libbz2-rs-sys"]

_crypto-nettle = ["sequoia-openpgp/crypto-nettle"]

[package.metadata.cargo-all-features]
always_include_features = [
    "sequoia-openpgp/crypto-nettle",
]

[package.metadata.release]
enable-features = ["sequoia-openpgp/crypto-nettle"]
tag = true
