[package]
name = "csaf-walker"
description = "A library to work with CSAF data"
version = "0.6.0-alpha.7"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf", "vex"]
readme = "../README.md"
# based on clap
rust-version = "1.70"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
cpe = "0.1.3"
csv = "1"
digest = "0.10.6"
filetime = "0.2"
futures = "0.3"
humantime = "2"
log = "0.4.17"
percent-encoding = "2.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.6"
thiserror = "1"
time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "fs"] }
url = { version = "2.3.1", features = ["serde"] }
walkdir = "2.4"

walker-common = { version = "0.6.0-alpha.7", path = "../common" }

sequoia-openpgp = { version = "1", default-features = false }

csaf = { version = "0.5", default-features = false, optional = true }
clap = "4.4.8"
html-escape = "0.2.13"

[features]
default = ["crypto-nettle", "csaf"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]

# workaround until xattr fixes its win32 compilation issues.
[target.'cfg(any(unix, macos))'.dependencies]
xattr = { version = "1" }

[package.metadata.cargo-all-features]
always_include_features = [
    "crypto-nettle",
]
denylist = [
    "crypto-cng",
    "crypto-openssl",
    "crypto-botan",
    "crypto-rust",
]
