[package]
name = "csaf-walker"
description = "A library to work with CSAF data"
version = "0.11.0-rc.3"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf", "vex"]
readme = "../README.md"
# based on fs::absolute
rust-version = "1.84.1"

[dependencies]
# normal
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
csv = { workspace = true }
digest = { workspace = true }
fluent-uri = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true, features = ["tokio-runtime"] }
html-escape = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sectxtlib = { workspace = true }
sequoia-openpgp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
tokio = { workspace = true, features = ["macros", "fs"] }
url = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }

# optional
csaf = { workspace = true, optional = true }
# for csaf-validator-lib
deno_core = { workspace = true, optional = true }

# internal
walker-common = { workspace = true, features = ["openpgp"] }

[dev-dependencies]
env_logger = { workspace = true }

[features]
default = ["crypto-nettle", "csaf"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]

csaf-validator-lib = [
    "deno_core",
]

# workaround until xattr fixes its win32 compilation issues.
[target.'cfg(any(unix, macos))'.dependencies]
xattr = { workspace = true }

[package.metadata.cargo-all-features]
always_include_features = [
    "crypto-nettle",
]
denylist = [
    "crypto-cng",
    "crypto-openssl",
    "crypto-botan",
    "crypto-rust",
]
