[package]
name = "walker-extras"
description = "Additional functionality for SBOM and CSAF walker"
version = "0.10.0"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf", "sbom"]
readme = "../README.md"
# based on async traits
rust-version = "1.75"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1"
bytes = "1"
humantime = "2.1.0"
log = "0.4"
reqwest = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["time"] }

clap = { version = "4.5.0", features = ["derive"], optional = true }

walker-common = { version = "0.10.0", path = "../common" }

csaf-walker = { version = "0.10.0", path = "../csaf", optional = true, default-features = false }
sbom-walker = { version = "0.10.0", path = "../sbom", optional = true, default-features = false }

[features]
default = [
    "clap",
    "csaf-walker",
    "sbom-walker"
]

clap = [
    "dep:clap",
    "walker-common/clap"
]

[package.metadata.docs.rs]
features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]

[package.metadata.cargo-all-features]
always_include_features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]

[package.metadata.release]
enable-features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]
tag = true
