[package]
name = "walker-extras"
description = "Additional functionality for SBOM and CSAF walker"
version = "0.10.2"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf", "sbom"]
readme = "../README.md"
# based on fs::absolute
rust-version = "1.79"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }

clap = { workspace = true, features = ["derive"], optional = true }

walker-common = { workspace = true }

csaf-walker = { workspace = true, optional = true, default-features = false }
sbom-walker = { workspace = true, optional = true, default-features = false }

[features]
default = [
    "clap",
    "csaf-walker",
    "sbom-walker"
]

clap = [
    "dep:clap",
    "walker-common/clap"
]

[package.metadata.docs.rs]
features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]

[package.metadata.cargo-all-features]
always_include_features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]

[package.metadata.release]
enable-features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]
tag = true
