[package]
name = "walker-extras"
description = "Additional functionality for SBOM and CSAF walker"
version = "0.12.0"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf", "sbom"]
readme = "../README.md"
rust-version = "1.85.0"

edition.workspace = true
license.workspace = true

[dependencies]
# normal
anyhow = { workspace = true }
bytes = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }

# optional
clap = { workspace = true, features = ["derive"], optional = true }

# internal
csaf-walker = { workspace = true, optional = true }
sbom-walker = { workspace = true, optional = true }
walker-common = { workspace = true }

[features]
default = [
    "clap",
    "csaf-walker",
    "sbom-walker"
]

clap = [
    "dep:clap",
    "walker-common/clap"
]

[package.metadata.docs.rs]
features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]

[package.metadata.cargo-all-features]
always_include_features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]

[package.metadata.release]
enable-features = [
    "csaf-walker/crypto-nettle",
    "sbom-walker/crypto-nettle",
]
tag = true
