[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
cpe = "0.1.3"
csv = "1"
digest = "0.10.6"
filetime = "0.2"
futures = "0.3"
humantime = "2"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.6"
thiserror = "1"
time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "fs", "rt", "rt-multi-thread"] }
url = { version = "2.3.1", features = ["serde"] }

walker-common = { version = "0.5", path = "../common" }

sequoia-openpgp = { version = "1", default-features = false }

csaf = { version = "0.5", default-features = false, optional = true }
csaf-walker ={ version = "0.5.4", path = "../csaf" }
