[package]
name = "sbom-walker"
description = "A library to work with SBOM data"
version = "0.10.0-alpha.1"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf"]
readme = "../README.md"
# based on async traits
rust-version = "1.75"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
csv = "1"
digest = "0.10.6"
filetime = "0.2"
fluent-uri = "0.3.2"
futures = "0.3"
http = "1.0"
humantime = "2"
log = "0.4.17"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.6"
thiserror = "1"
time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "fs"] }
url = { version = "2.3.1", features = ["serde"] }

walker-common = { version = "0.10.0-alpha.1", path = "../common", features = ["openpgp"] }

sequoia-openpgp = { version = "1", default-features = false }

cyclonedx-bom = { version = "0.7.0", optional = true }
spdx-rs = { version = "0.5.4", optional = true }

[features]
default = ["crypto-nettle", "cyclonedx-bom", "spdx-rs"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]

[package.metadata.cargo-all-features]
always_include_features = [
    "crypto-nettle",
]
denylist = [
    "crypto-cng",
    "crypto-openssl",
    "crypto-botan",
    "crypto-rust",
]
