[package]
name = "sbom-walker"
description = "A library to work with SBOM data"
version = "0.10.2"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["data-structures"]
keywords = ["csaf"]
readme = "../README.md"
# based on fs::absolute
rust-version = "1.84.1"

[dependencies]
# normal
anyhow = { workspace = true }
bytes = { workspace = true }
csv = { workspace = true }
digest = { workspace = true }
fluent-uri = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sequoia-openpgp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
tokio = { workspace = true, features = ["macros", "fs"] }
url = { workspace = true, features = ["serde"] }

# optional
cyclonedx-bom = { workspace = true, optional = true }
spdx-rs = { workspace = true, optional = true }

# internal
walker-common = { workspace = true, features = ["openpgp"] }

[features]
default = ["crypto-nettle", "cyclonedx-bom", "spdx-rs"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]

[package.metadata.cargo-all-features]
always_include_features = [
    "crypto-nettle",
]
denylist = [
    "crypto-cng",
    "crypto-openssl",
    "crypto-botan",
    "crypto-rust",
]
