[package]
name = "csaf-cli"
description = "A CLI to work with CSAF data"
version = "0.10.0-alpha.1"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["command-line-utilities", "data-structures"]
keywords = ["csaf", "vex", "cli"]
readme = "README.md"
# based on async traits
rust-version = "1.75"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5.0", features = ["derive", "color"] }
colored_json = "5"
csaf = { version = "0.5.0", default-features = false }
env_logger = "0.11.2"
flexible-time = "0.1.1"
humantime = "2"
log = "0.4.17"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = "0.3.20"
tokio = { version = "1", features = ["full"] }

walker-common = { version = "0.10.0-alpha.1", path = "../../common", features = ["openpgp", "cli"] }
walker-extras = { version = "0.10.0-alpha.1", path = "../../extras" }
csaf-walker = { version = "0.10.0-alpha.1", path = "..", default-features = false, features = ["csaf"] }

# just there for the feature
openssl = { version = "0.10", optional = true }

[features]
default = ["crypto-nettle"]
crypto-cng = ["csaf-walker/crypto-cng"]
crypto-nettle = ["csaf-walker/crypto-nettle"]
crypto-openssl = ["csaf-walker/crypto-openssl"]
crypto-botan = ["csaf-walker/crypto-botan"]
crypto-rust = ["csaf-walker/crypto-rust"]

vendored = ["openssl/vendored"]

csaf-validator-lib = [
    "csaf-walker/csaf-validator-lib"
]

[[bin]]
name = "csaf"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/csaf-{ target }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.cargo-all-features]
always_include_features = [
    "crypto-nettle",
]
denylist = [
    "crypto-cng",
    "crypto-openssl",
    "crypto-botan",
    "crypto-rust",
]
