[package]
name = "csaf-cli"
description = "A CLI to work with CSAF data"
version = "0.10.2"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["command-line-utilities", "data-structures"]
keywords = ["csaf", "vex", "cli"]
readme = "README.md"
# based on fs::absolute
rust-version = "1.79"

[dependencies]
anyhow =  { workspace = true }
clap = { workspace = true, features = ["derive", "color"] }
colored_json =  { workspace = true }
csaf = { workspace = true }
flexible-time =  { workspace = true }
humantime =  { workspace = true }
log =  { workspace = true }
# just there for the feature
openssl = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json =  { workspace = true }
tokio = { workspace = true, features = ["full"] }

csaf-walker = { workspace = true, features = ["csaf"] }
walker-common = { workspace = true, features = ["openpgp", "cli"] }
walker-extras = { workspace = true }

[features]
default = ["crypto-nettle"]
crypto-cng = ["csaf-walker/crypto-cng"]
crypto-nettle = ["csaf-walker/crypto-nettle"]
crypto-openssl = ["csaf-walker/crypto-openssl"]
crypto-botan = ["csaf-walker/crypto-botan"]
crypto-rust = ["csaf-walker/crypto-rust"]

vendored = ["openssl/vendored"]

csaf-validator-lib = [
    "csaf-walker/csaf-validator-lib"
]

[[bin]]
name = "csaf"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/csaf-{ target }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.cargo-all-features]
always_include_features = [
    "crypto-nettle",
]
denylist = [
    "crypto-cng",
    "crypto-openssl",
    "crypto-botan",
    "crypto-rust",
]
