[package]
name = "sbom-cli"
description = "A CLI to work with SBOM data"
version = "0.10.2"
edition = "2021"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/csaf-walker"
categories = ["command-line-utilities", "data-structures"]
keywords = ["sbom", "cli"]
readme = "README.md"
# based on fs::absolute
rust-version = "1.79"

[dependencies]
# normal
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bzip2-rs = { workspace = true, features = ["rustc_1_51"] }
clap = { workspace = true, features = ["derive", "color"] }
csaf = { workspace = true }
env_logger = { workspace = true }
flexible-time = { workspace = true }
html-escape = { workspace = true }
humantime =  { workspace = true }
log =  { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json =  { workspace = true }
spdx-expression = { workspace = true }
spdx-rs =  { workspace = true }
thiserror =  { workspace = true }
time =  { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

# internal
sbom-walker = { workspace = true, features = ["cyclonedx-bom", "spdx-rs"] }
walker-common = { workspace = true, features = ["openpgp", "cli"] }
walker-extras = { workspace = true }

# just there for the feature
openssl =  { workspace = true, optional = true }

[features]
default = ["crypto-nettle"]
crypto-cng = ["sbom-walker/crypto-cng"]
crypto-nettle = ["sbom-walker/crypto-nettle"]
crypto-openssl = ["sbom-walker/crypto-openssl"]
crypto-botan = ["sbom-walker/crypto-botan"]
crypto-rust = ["sbom-walker/crypto-rust"]

vendored = ["openssl/vendored"]

[package.metadata.cargo-all-features]
always_include_features = [
    "crypto-nettle",
]
denylist = [
    "crypto-cng",
    "crypto-openssl",
    "crypto-botan",
    "crypto-rust",
]

[[bin]]
name = "sbom"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sbom-{ target }{ binary-ext }"
pkg-fmt = "bin"

